# cpp-bootstrap-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
Examples/HelloWorld/: CMakeLists.txt
Examples/HelloWorld/Source/: main.cpp
